owl-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__block-stmt-multiple.snap
---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(\"{ 1; 2; }\")"
---
Stmt {
    kind: Block(
        [
            Stmt {
                kind: ExprStmt(
                    Expr {
                        kind: NumberLit(
                            1.0,
                        ),
                        span: 2..3,
                    },
                ),
                span: 2..4,
            },
            Stmt {
                kind: ExprStmt(
                    Expr {
                        kind: NumberLit(
                            2.0,
                        ),
                        span: 5..6,
                    },
                ),
                span: 5..7,
            },
        ],
    ),
    span: 0..9,
}
