owl-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__if-else-stmt-empty.snap
---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(r#\"if condition {} else {}\"#)"
---
Stmt {
    kind: IfElseStmt {
        condition: Expr {
            kind: Identifier(
                "condition",
            ),
            span: 3..12,
        },
        if_block: [],
        else_block: Some(
            [],
        ),
    },
    span: 0..23,
}
