owl-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__if-else-stmt.snap
---
source: owl-parser/src/parser/stmt.rs
expression: "stmt(r#\"\n                if condition {\n                    if_block();\n                } else {\n                    else_block();\n                }\"#)"
---
Stmt {
    kind: IfElseStmt {
        condition: Expr {
            kind: Identifier(
                "condition",
            ),
            span: 20..29,
        },
        if_block: [
            Stmt {
                kind: ExprStmt(
                    Expr {
                        kind: FnCall {
                            callee: Expr {
                                kind: Identifier(
                                    "if_block",
                                ),
                                span: 52..60,
                            },
                            args: [],
                        },
                        span: 52..62,
                    },
                ),
                span: 52..63,
            },
        ],
        else_block: Some(
            [
                Stmt {
                    kind: ExprStmt(
                        Expr {
                            kind: FnCall {
                                callee: Expr {
                                    kind: Identifier(
                                        "else_block",
                                    ),
                                    span: 109..119,
                                },
                                args: [],
                            },
                            span: 109..121,
                        },
                    ),
                    span: 109..122,
                },
            ],
        ),
    },
    span: 17..140,
}
